--- a/read_csv.ipynb
+++ b/read_csv.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPYohjtv5JAuLGcUqIrS846",
+      "authorship_tag": "ABX9TyO99v7zPiq7noD4rnEM20nS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 115,
       "metadata": {
         "id": "SH5aytQMrPWp"
       },
@@ -49,12 +49,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 364
         },
         "id": "4260kdmnsQwk",
-        "outputId": "4d5000db-e922-48f7-dc18-fd90a6ab6c4b"
+        "outputId": "29508106-5800-40c9-96b5-1d7026573a9a"
       },
-      "execution_count": 87,
+      "execution_count": 125,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -128,7 +128,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-89dccbe4-c100-4fd7-8a3b-2285854d15f5\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-16317d3e-c08b-4ef4-9b05-951c02e2bc76\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -313,7 +313,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-89dccbe4-c100-4fd7-8a3b-2285854d15f5')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-16317d3e-c08b-4ef4-9b05-951c02e2bc76')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -365,12 +365,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-89dccbe4-c100-4fd7-8a3b-2285854d15f5 button.colab-df-convert');\n",
+              "        document.querySelector('#df-16317d3e-c08b-4ef4-9b05-951c02e2bc76 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-89dccbe4-c100-4fd7-8a3b-2285854d15f5');\n",
+              "        const element = document.querySelector('#df-16317d3e-c08b-4ef4-9b05-951c02e2bc76');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -390,8 +390,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-6638dc64-f801-40ce-92a3-55940588d6c2\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6638dc64-f801-40ce-92a3-55940588d6c2')\"\n",
+              "<div id=\"df-e18dfd2e-24d6-47bf-9ff0-3a581b09339b\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e18dfd2e-24d6-47bf-9ff0-3a581b09339b')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -510,7 +510,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-6638dc64-f801-40ce-92a3-55940588d6c2 button');\n",
+              "        document.querySelector('#df-e18dfd2e-24d6-47bf-9ff0-3a581b09339b button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -521,7 +521,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 87
+          "execution_count": 125
         }
       ]
     },
@@ -534,12 +534,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 364
         },
         "id": "Ib4wNVKitOEu",
-        "outputId": "fd2224fa-5eb5-44aa-a896-f4bccb4788cf"
+        "outputId": "81dec69e-1d2e-4a7b-b908-5af008517989"
       },
-      "execution_count": 88,
+      "execution_count": 126,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -613,7 +613,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a7e75dbe-d1ff-463a-8bb1-168fdefbc7b8\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-dc1f2c8f-add0-42c8-ae6c-4cb426201217\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -798,7 +798,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a7e75dbe-d1ff-463a-8bb1-168fdefbc7b8')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dc1f2c8f-add0-42c8-ae6c-4cb426201217')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -850,12 +850,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-a7e75dbe-d1ff-463a-8bb1-168fdefbc7b8 button.colab-df-convert');\n",
+              "        document.querySelector('#df-dc1f2c8f-add0-42c8-ae6c-4cb426201217 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-a7e75dbe-d1ff-463a-8bb1-168fdefbc7b8');\n",
+              "        const element = document.querySelector('#df-dc1f2c8f-add0-42c8-ae6c-4cb426201217');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -875,8 +875,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-220260e3-3ad0-42e6-9181-d74978f17a51\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-220260e3-3ad0-42e6-9181-d74978f17a51')\"\n",
+              "<div id=\"df-0437830d-57d1-4153-a798-acafb3bd8183\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0437830d-57d1-4153-a798-acafb3bd8183')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -995,7 +995,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-220260e3-3ad0-42e6-9181-d74978f17a51 button');\n",
+              "        document.querySelector('#df-0437830d-57d1-4153-a798-acafb3bd8183 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1006,7 +1006,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 88
+          "execution_count": 126
         }
       ]
     },
@@ -1014,37 +1014,35 @@
       "cell_type": "code",
       "source": [
         "csv = csv[csv['genres'].str.contains('Comedy', case=False, na=False)]\n",
-        "csv['year'] = csv['title'].str.split('(', n=1).str[1].str.rstrip(')')\n",
-        "csv['title'] = csv['title'].str.replace(r'\\(\\d{4}\\)', '', regex=True).str.strip()\n",
-        "\n",
-        "csv.reset_index(drop=True)"
+        "csv.loc[:, 'year'] = [str(year).split('(')[-1].rstrip(')') for year in csv['title']]\n",
+        "display(csv.reset_index(drop=True))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 424
+          "height": 364
         },
         "id": "AwY4coyXzSrc",
-        "outputId": "58c24a3a-a881-4282-d35f-aa4802ce0fe6"
+        "outputId": "81a169e1-e1f3-467f-c367-1c6fc9a3c34c"
       },
-      "execution_count": 92,
+      "execution_count": 129,
       "outputs": [
         {
-          "output_type": "execute_result",
+          "output_type": "display_data",
           "data": {
             "text/plain": [
-              "                                   title  \\\n",
-              "0                              Toy Story   \n",
-              "1                       Grumpier Old Men   \n",
-              "2                      Waiting to Exhale   \n",
-              "3            Father of the Bride Part II   \n",
-              "4                                Sabrina   \n",
-              "...                                  ...   \n",
-              "3751                  Gintama: The Movie   \n",
-              "3752                        Silver Spoon   \n",
-              "3753  Black Butler: Book of the Atlantic   \n",
-              "3754               No Game No Life: Zero   \n",
-              "3755        Andrew Dice Clay: Dice Rules   \n",
+              "                                          title  \\\n",
+              "0                              Toy Story (1995)   \n",
+              "1                       Grumpier Old Men (1995)   \n",
+              "2                      Waiting to Exhale (1995)   \n",
+              "3            Father of the Bride Part II (1995)   \n",
+              "4                                Sabrina (1995)   \n",
+              "...                                         ...   \n",
+              "3751                  Gintama: The Movie (2010)   \n",
+              "3752                        Silver Spoon (2014)   \n",
+              "3753  Black Butler: Book of the Atlantic (2017)   \n",
+              "3754               No Game No Life: Zero (2017)   \n",
+              "3755        Andrew Dice Clay: Dice Rules (1991)   \n",
               "\n",
               "                                               genres  year  \n",
               "0     Adventure, Animation, Children, Comedy, Fantasy  1995  \n",
@@ -1063,7 +1061,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-629652ee-096d-4ff5-80aa-af9e23ca66c5\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-e3af7252-fd39-4900-a0f1-5dc798c92400\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1090,31 +1088,31 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>Toy Story</td>\n",
+              "      <td>Toy Story (1995)</td>\n",
               "      <td>Adventure, Animation, Children, Comedy, Fantasy</td>\n",
               "      <td>1995</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>Grumpier Old Men</td>\n",
+              "      <td>Grumpier Old Men (1995)</td>\n",
               "      <td>Comedy, Romance</td>\n",
               "      <td>1995</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>Waiting to Exhale</td>\n",
+              "      <td>Waiting to Exhale (1995)</td>\n",
               "      <td>Comedy, Drama, Romance</td>\n",
               "      <td>1995</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>Father of the Bride Part II</td>\n",
+              "      <td>Father of the Bride Part II (1995)</td>\n",
               "      <td>Comedy</td>\n",
               "      <td>1995</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>Sabrina</td>\n",
+              "      <td>Sabrina (1995)</td>\n",
               "      <td>Comedy, Romance</td>\n",
               "      <td>1995</td>\n",
               "    </tr>\n",
@@ -1126,31 +1124,31 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3751</th>\n",
-              "      <td>Gintama: The Movie</td>\n",
+              "      <td>Gintama: The Movie (2010)</td>\n",
               "      <td>Action, Animation, Comedy, Sci-Fi</td>\n",
               "      <td>2010</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3752</th>\n",
-              "      <td>Silver Spoon</td>\n",
+              "      <td>Silver Spoon (2014)</td>\n",
               "      <td>Comedy, Drama</td>\n",
               "      <td>2014</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3753</th>\n",
-              "      <td>Black Butler: Book of the Atlantic</td>\n",
+              "      <td>Black Butler: Book of the Atlantic (2017)</td>\n",
               "      <td>Action, Animation, Comedy, Fantasy</td>\n",
               "      <td>2017</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3754</th>\n",
-              "      <td>No Game No Life: Zero</td>\n",
+              "      <td>No Game No Life: Zero (2017)</td>\n",
               "      <td>Animation, Comedy, Fantasy</td>\n",
               "      <td>2017</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3755</th>\n",
-              "      <td>Andrew Dice Clay: Dice Rules</td>\n",
+              "      <td>Andrew Dice Clay: Dice Rules (1991)</td>\n",
               "      <td>Comedy</td>\n",
               "      <td>1991</td>\n",
               "    </tr>\n",
@@ -1161,7 +1159,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-629652ee-096d-4ff5-80aa-af9e23ca66c5')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e3af7252-fd39-4900-a0f1-5dc798c92400')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1213,12 +1211,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-629652ee-096d-4ff5-80aa-af9e23ca66c5 button.colab-df-convert');\n",
+              "        document.querySelector('#df-e3af7252-fd39-4900-a0f1-5dc798c92400 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-629652ee-096d-4ff5-80aa-af9e23ca66c5');\n",
+              "        const element = document.querySelector('#df-e3af7252-fd39-4900-a0f1-5dc798c92400');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1238,8 +1236,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-5fc97103-7a39-4eb9-9997-6ee49b0abc80\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5fc97103-7a39-4eb9-9997-6ee49b0abc80')\"\n",
+              "<div id=\"df-aa451771-470f-43ae-b734-2c70a139cbd3\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-aa451771-470f-43ae-b734-2c70a139cbd3')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1358,7 +1356,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-5fc97103-7a39-4eb9-9997-6ee49b0abc80 button');\n",
+              "        document.querySelector('#df-aa451771-470f-43ae-b734-2c70a139cbd3 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1368,10 +1366,18 @@
               "  </div>\n"
             ]
           },
-          "metadata": {},
-          "execution_count": 92
+          "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "FKNtT7mF6n6K"
+      },
+      "execution_count": 123,
+      "outputs": []
     }
   ]
 }
